argocd/apps/development/registry/manifests/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
  labels:
    dns.homelabtech.net/provider: externaldns
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
  hostnames:
  - registry.carsonanderson.net
  rules:
  - backendRefs:
    - name: registry
      port: 5000
